refactoring, add spacing between letters, dont leak word in browser, fix player and game creation

--- a/hangman/static/hangman/styles.css
+++ b/hangman/static/hangman/styles.css
@@ -1,39 +1,47 @@
-.lettersGroup{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    position: fixed;
-    bottom: 0;
+.lettersGroup {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  position: fixed;
+  bottom: 0;
 }
-.letter,.gmLetter{
-    width: 100%;
-    height: 100px;
-    padding: 20px;
-    background-color: lightblue;
-    color: white;
-    display: flex;
-    align-content: center;
-    flex-wrap: wrap;
-    font-size: 50px;
+
+.letter, .gmLetter {
+  width: 100%;
+  height: 100px;
+  padding: 20px;
+  background-color: lightblue;
+  color: white;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  font-size: 50px;
 }
-.word{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap; 
-    width:20% ;
+
+.word {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap; 
+  width:20% ;
 }
+
+.wordLetter:not(:last-child) {
+  margin-right: 5px;
+}
+
 .wordLetter{
-    width: 20%;
-    height: 50px;
-    padding: 20px;
-    background-color: lightblue;
-    color: white;
-    display: flex;
-    align-content: center;
-    flex-wrap: wrap;
-    font-size: 50px;
+  width: 20%;
+  height: 60px;
+  padding: 20px;
+  background-color: lightblue;
+  color: white;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  font-size: 50px;
 }
+
 .PlayBtn{
-    width: 50px;
-    height: 25px;
+  width: 50px;
+  height: 25px;
 }
